# tgdraft

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  Procfile  README.rst  pyproject.toml
.github/workflows/: deploy.yml
tests/: test_draft_codes.py
tests/test_entities/: test_cubes.py
tgdraft/: __main__.py  bot.py  tgdraft.py
tgdraft/entities/: cube.py  draft.py  user.py
tgdraft/managers/: cube_manager.py  draft_manager.py  user_manager.py
